alter the  contenr

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section>
     <div class="content">
         <h4>real estate investing</h4>
-        <h1>what is a real estate agent</h1>
+        <h1>What Is a Real Estate Agent?</h1>
         <p> Real estate agents are licenced professionals who arrange real estate <br> transaction, putting buyers and seller together and ascting as their <br> representatives in negotiations</p>
     </div>
     <div class="image-wrap">
